# esp-idf-svc

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  clippy.toml  crates.js  espflash.toml  help.html  index.html  sdkconfig.defaults  settings.html  src-files.js
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
atomic_waker/: all.html  index.html  struct.AtomicWaker.html
byteorder/: all.html  enum.BigEndian.html  enum.LittleEndian.html  index.html  trait.ByteOrder.html  type.BE.html  type.LE.html  type.NativeEndian.html  type.NetworkEndian.html
cfg_if/: all.html  index.html  macro.cfg_if.html
const_format/: all.html  enum.Case.html  index.html  macro.concatcp.html  macro.formatcp.html  macro.map_ascii_case.html  macro.str_get.html  macro.str_index.html  macro.str_repeat.html  macro.str_replace.html  macro.str_splice.html  struct.SplicedStr.html
critical_section/: all.html  fn.acquire.html  fn.release.html  fn.with.html  index.html  macro.set_impl.html  struct.CriticalSection.html  struct.Mutex.html  struct.RestoreState.html  trait.Impl.html  type.RawRestoreState.html
embassy_futures/: all.html  fn.block_on.html  fn.poll_once.html  fn.yield_now.html  index.html  sidebar-items.js
embassy_sync/: all.html  index.html  sidebar-items.js
embedded_can/: all.html  enum.ErrorKind.html  enum.Id.html  index.html  struct.ExtendedId.html  struct.StandardId.html  trait.Error.html  trait.Frame.html
embedded_hal/: all.html  index.html
embedded_hal_async/: all.html  index.html
embedded_hal_nb/: all.html  index.html
embedded_io/: all.html  enum.ErrorKind.html  enum.ReadExactError.html  enum.SeekFrom.html  enum.SliceWriteError.html  enum.WriteFmtError.html  index.html  trait.BufRead.html  trait.Error.html  trait.ErrorType.html  trait.Read.html  trait.ReadReady.html  trait.Seek.html  trait.Write.html  trait.WriteReady.html
embedded_io_async/: all.html  enum.ErrorKind.html  enum.ReadExactError.html  enum.SeekFrom.html  index.html  trait.BufRead.html  trait.Error.html  trait.ErrorType.html  trait.Read.html  trait.ReadReady.html  trait.Seek.html  trait.Write.html  trait.WriteReady.html
embedded_svc/: all.html  index.html  macro.svc_log!.html  macro.svc_log.html  sidebar-items.js
enumset/: all.html  derive.EnumSetType.html  index.html  macro.enum_set.html  struct.EnumSet.html  struct.EnumSetIter.html  trait.EnumSetType.html  trait.EnumSetTypeWithRepr.html
esp_idf_hal/: all.html  index.html  macro.into_ref.html
esp_idf_svc/: all.html  index.html  sidebar-items.js
esp_idf_sys/: all.html  constant.ADC_CALI_SCHEME_CURVE_FITTING_SUPPORTED.html  constant.AES_128_KEY_BYTES.html  constant.AES_192_KEY_BYTES.html  constant.AES_256_KEY_BYTES.html  constant.AES_BLOCK_BYTES.html  constant.AES_BLOCK_WORDS.html  constant.AF_INET.html  constant.AF_INET6.html  constant.AF_UNSPEC.html  constant.AGC_RECORRECT_EN.html  constant.AI_ADDRCONFIG.html  constant.AI_ALL.html  constant.AI_CANONNAME.html  constant.AI_NUMERICHOST.html  constant.AI_NUMERICSERV.html  constant.AI_PASSIVE.html  constant.AI_V4MAPPED.html  constant.AM_ARC.html  constant.AM_DIR.html  constant.AM_HID.html  constant.AM_RDO.html  constant.AM_SYS.html  constant.ANT_SEL0_IDX.html  constant.ANT_SEL1_IDX.html  constant.ANT_SEL2_IDX.html  constant.ANT_SEL3_IDX.html  constant.ANT_SEL4_IDX.html  constant.ANT_SEL5_IDX.html  constant.ANT_SEL6_IDX.html  constant.ANT_SEL7_IDX.html  constant.APB_CLK_FREQ.html  constant.APB_CLK_FREQ_ROM.html  constant.API_MSG_DEBUG.html  constant.APP_ELF_SHA256_SZ.html  constant.ARG_CMD_DESCRIPTION_LEN.html  constant.ARG_CMD_NAME_LEN.html  constant.ARG_DSTR_SIZE.html  constant.ARG_ELIMIT.html  constant.ARG_ELONGOPT.html  (+19357 more)
examples/: ble_gatt_server.rs  bt_a2dp_sink_external_codec.rs  bt_ble_gap_scanner.rs  bt_gatt_client.rs  bt_gatt_server.rs  bt_spp_acceptor.rs  bt_trouble_gatt_central.rs  bt_trouble_gatt_peripheral.rs  bt_trouble_scan.rs  eth.rs  eth_spi_async.rs  eventloop.rs  gatt_server.rs  http_client.rs  http_local_network_server.rs  http_request.rs  http_server.rs  http_server_page.html  http_ws_client.rs  http_ws_server.rs  http_ws_server_page.html  json_post_handler.html  json_post_handler.rs  logging.rs  lte_modem.rs  mdns_advertise.rs  mqtt_client.rs  mqtt_client_async.rs  nvs_get_set_c_style.rs  nvs_get_set_raw_storage.rs  nvs_read_write.rs  ota_http_client.rs  sd_mmc.rs  sd_spi.rs  sd_spi_littlefs.rs  sntp.rs  stdin_read.rs  tcp.rs  tcp_async.rs  thread.rs  (+19 more)
futures_core/: all.html  index.html  macro.ready.html
futures_io/: all.html  index.html  trait.AsyncBufRead.html  trait.AsyncRead.html  trait.AsyncSeek.html  trait.AsyncWrite.html
futures_task/: all.html  fn.noop_waker.html  fn.noop_waker_ref.html  index.html  struct.FutureObj.html  struct.LocalFutureObj.html  struct.SpawnError.html  trait.LocalSpawn.html  trait.Spawn.html  trait.UnsafeFutureObj.html
futures_util/: all.html  index.html  macro.pin_mut.html  macro.ready.html
hash32/: all.html  index.html  struct.BuildHasherDefault.html  struct.FnvHasher.html  struct.Murmur3Hasher.html  trait.Hasher.html
heapless/: all.html  enum.Entry.html  index.html  struct.Deque.html  struct.HistoryBuffer.html  struct.IndexMap.html  struct.IndexMapIter.html  struct.IndexMapIterMut.html  struct.IndexMapKeys.html  struct.IndexMapValues.html  struct.IndexMapValuesMut.html  struct.IndexSet.html  struct.IndexSetIter.html  struct.LinearMap.html  struct.OccupiedEntry.html  struct.OldestOrdered.html  struct.String.html  struct.VacantEntry.html  struct.Vec.html  type.FnvIndexMap.html  type.FnvIndexSet.html
libc/: all.html  constant.AF_INET.html  constant.AF_INET6.html  constant.AF_UNIX.html  constant.AF_UNSPEC.html  constant.AI_ADDRCONFIG.html  constant.AI_CANONNAME.html  constant.AI_NUMERICHOST.html  constant.AI_NUMERICSERV.html  constant.AI_PASSIVE.html  constant.ARPOP_REPLY.html  constant.ARPOP_REQUEST.html  constant.ATF_COM.html  constant.ATF_PERM.html  constant.ATF_PUBL.html  constant.ATF_USETRAILERS.html  constant.CLOCK_BOOTTIME.html  constant.CLOCK_MONOTONIC.html  constant.CLOCK_REALTIME.html  constant.DT_BLK.html  (+879 more)
(+63701 files in other folders)
