[package]
name = "esp-idf-svc"
version = "0.51.0"
authors = ["Ivan Markov <ivan.markov@gmail.com>"]
edition = "2021"
resolver = "2"
categories = ["embedded", "hardware-support"]
keywords = ["embedded", "svc", "idf", "esp-idf", "esp32"]
description = "Implementation of the embedded-svc traits for ESP-IDF (Espressif's IoT Development Framework)"
repository = "https://github.com/esp-rs/esp-idf-svc"
license = "MIT OR Apache-2.0"
readme = "README.md"
links = "esp_idf_svc"
build = "build.rs"
documentation = "https://docs.esp-rs.org/esp-idf-svc/"
rust-version = "1.77"

[patch.crates-io]
esp-idf-sys = { git = "https://github.com/esp-rs/esp-idf-sys" }
esp-idf-hal = { git = "https://github.com/esp-rs/esp-idf-hal" }

[lib]
harness = false

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[profile.dev.package."*"]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "binstart"]

std = ["alloc", "log/std", "esp-idf-hal/std", "embedded-svc/std", "futures-io"]
embassy-time-driver = ["dep:embassy-time-driver", "embassy-time-queue-utils"]
alloc = ["esp-idf-hal/alloc", "embedded-svc/alloc", "uncased/alloc"]
nightly = ["embedded-svc/nightly", "esp-idf-hal/nightly"]
experimental = ["embedded-svc/experimental", "esp-idf-hal/experimental"]

# Provide a ble controller for use with embassy trouble / bt-hci
trouble = ["dep:bt-hci", "experimental", "embassy-time-driver"]

# Propagated esp-idf-hal features
critical-section = ["esp-idf-hal/critical-section"]
wake-from-isr = ["esp-idf-hal/wake-from-isr"]
embassy-sync = ["esp-idf-hal/embassy-sync"]

# The next are propagated from esp-idf-sys via esp-idf-hal
native = ["esp-idf-hal/native"]
pio = ["esp-idf-hal/pio"]
alloc_handler = ["esp-idf-hal/alloc_handler"]
panic_handler = ["esp-idf-hal/panic_handler"]
binstart = ["esp-idf-hal/binstart"]
libstart = ["esp-idf-hal/libstart"]

# Propagated form embeded-svc
use_serde = ["embedded-svc/use_serde"]

[dependencies]
heapless = { version = "0.8", default-features = false }
num_enum = { version = "0.7", default-features = false }
enumset = { version = "1", default-features = false }
log = { version = "0.4", default-features = false }
uncased = { version = "0.9.7", default-features = false }
embedded-hal-async = { version = "1", default-features = false }
embedded-svc = { version = "0.28", default-features = false }
esp-idf-hal = { version = "0.45", default-features = false }
embassy-time-driver = { version = "0.2", optional = true, features = ["tick-hz-1_000_000"] }
embassy-time-queue-utils = { version = "0.1", optional = true }
embassy-futures = "0.1"
embedded-storage = { version = "0.3", optional = true }
futures-io = { version = "0.3", optional = true }
bt-hci = {version = "0.3", optional = true, features = ["log", "uuid", "embassy-time"]}

[build-dependencies]
embuild = "0.33"

[dev-dependencies]
anyhow = "1"
esp-idf-sys = { version = "0.36", features = ["binstart"] }
futures = "0.3"
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
postcard = "1"
async-io = "2"
# used for trouble bt examples
trouble-host = { git = "https://github.com/embassy-rs/trouble" , features = ["derive","scan","central","peripheral","log", "gatt"], default-features = false}
embassy-time = { version = "0.4.0", features = ["generic-queue-32"] }
embassy-sync = { version = "0.6.2"}
static_cell = "2.1.0"
# end trouble bt example usage
